<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jhgomez.calculator.MainActivity">


    <TextView
        android:text="@string/n_mero_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et2"
        android:layout_below="@+id/et1"
        android:layout_alignLeft="@+id/et1"
        android:layout_alignStart="@+id/et1"
        android:layout_row="1"
        android:layout_column="0"
        android:text="#2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginStart="40dp"
        android:text="#1" />

    <TextView
        android:text="@string/n_mero_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_alignBaseline="@+id/et2"
        android:layout_alignBottom="@+id/et2"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:id="@+id/tv1"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_below="@+id/et2"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginTop="23dp" />

    <Button
        android:text="@string/suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/suma"
        android:onClick="suma" />

    <Button
        android:text="@string/divisi_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/promedio"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:id="@+id/division"
        android:onClick="division" />

    <Button
        android:text="@string/promedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/promedio"
        android:layout_alignBaseline="@+id/suma"
        android:layout_alignBottom="@+id/suma"
        android:layout_centerHorizontal="true"
        android:onClick="promedio" />

    <Button
        android:text="@string/mayor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suma"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:id="@+id/mayor"
        android:onClick="mayor" />

    <Button
        android:text="@string/menor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mayor"
        android:layout_alignStart="@+id/promedio"
        android:id="@+id/menor"
        android:onClick="menor" />

    <Button
        android:text="@string/resta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/menor"
        android:layout_alignEnd="@+id/division"
        android:id="@+id/resta"
        android:onClick="resta" />

    <Button
        android:text="@string/acerca_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menor"
        android:layout_alignStart="@+id/menor"
        android:layout_marginTop="53dp"
        android:id="@+id/by"
        android:onClick="by" />

</RelativeLayout>
